name:                mtl-tf
version:             0.1
synopsis:            Monad Transformer Library with Type Families
description:
    A port of the mtl to type families.

    A monad transformer library, inspired by the paper /Functional
    Programming with Overloading and Higher-Order Polymorphism/,
    by Mark P Jones (<http://web.cecs.pdx.edu/~mpj/pubs/springschool.html>),
    Advanced School of Functional Programming, 1995.
license:             BSD3
license-file:        LICENSE
author:              Andy Gill, M Farkas-Dyck
maintainer:          strake888@gmail.com
-- copyright:           
category:            Control
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Control.Monad.Cont
                     , Control.Monad.Cont.Class
                     , Control.Monad.Error
                     , Control.Monad.Error.Class
                     , Control.Monad.Identity
                     , Control.Monad.List
                     , Control.Monad.Reader
                     , Control.Monad.Reader.Class
                     , Control.Monad.RWS
                     , Control.Monad.RWS.Class
                     , Control.Monad.RWS.Lazy
                     , Control.Monad.RWS.Strict
                     , Control.Monad.State
                     , Control.Monad.State.Class
                     , Control.Monad.State.Lazy
                     , Control.Monad.State.Strict
                     , Control.Monad.Trans
                     , Control.Monad.Writer
                     , Control.Monad.Writer.Class
                     , Control.Monad.Writer.Lazy
                     , Control.Monad.Writer.Strict
  -- other-modules:       
  build-depends:       base, transformers
  -- hs-source-dirs:      
  default-language:    Haskell2010
  default-extensions:  TypeFamilies
                     , FlexibleContexts
                     , FlexibleInstances
                     , TypeSynonymInstances
                     , ConstrainedClassMethods
  ghc-options:         -Wall
